https://github.com/toposoid/toposoid-deduction-protocol-model/issues/5

--- a/Dockerfile-workflow
+++ b/Dockerfile-workflow
@@ -6,6 +6,10 @@ ENV DEPLOYMENT=local
 
 RUN apt-get update \
 && apt-get -y install git \
+&& git clone https://github.com/toposoid/toposoid-knowledgebase-model.git \
+&& cd toposoid-knowledgebase-model \
+&& git fetch origin ${TARGET_BRANCH} \
+&& git checkout ${TARGET_BRANCH}
 && git clone https://github.com/toposoid/toposoid-deduction-protocol-model.git \
 && cd toposoid-deduction-protocol-model \
 && git fetch origin ${TARGET_BRANCH} \
