--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,7 +9,7 @@ env:
   PJ_ACTOR: toposoid
   PJ_REPO: toposoid-deduction-protocol-model
   PJ_BRANCH: feature
-  PJ_VERSION: 0.1-SNAPSHOT
+  PJ_VERSION: 0.2
 jobs:
   header-check_toposoid-deduction-protocol-modelj:
     runs-on: ubuntu-latest
@@ -25,4 +25,4 @@ jobs:
             docker build --build-arg TARGET_BRANCH=${{ env.PJ_BRANCH }} --tag ${{ env.PJ_REPO }}:${{ env.PJ_VERSION }} -f Dockerfile-workflow .
             docker-compose -f docker-compose-workflow.yml up -d
             docker-compose -f docker-compose-workflow.yml exec -T ${{ env.PJ_REPO }} bash -c "cd ${{ env.PJ_REPO }} && sbt headerCheck"
-
+            docker-compose -f docker-compose-workflow.yml exec -T ${{ env.PJ_REPO }} bash -c "cd ${{ env.PJ_REPO }} && sbt compile"
