--- a/Dockerfile-workflow
+++ b/Dockerfile-workflow
@@ -9,7 +9,8 @@ RUN apt-get update \
 && git clone https://github.com/toposoid/toposoid-knowledgebase-model.git \
 && cd toposoid-knowledgebase-model \
 && git fetch origin ${TARGET_BRANCH} \
-&& git checkout ${TARGET_BRANCH}
+&& git checkout ${TARGET_BRANCH} \
+&& cd ..  \
 && git clone https://github.com/toposoid/toposoid-deduction-protocol-model.git \
 && cd toposoid-deduction-protocol-model \
 && git fetch origin ${TARGET_BRANCH} \
