--- a/Dockerfile-workflow
+++ b/Dockerfile-workflow
@@ -10,6 +10,7 @@ RUN apt-get update \
 && cd toposoid-knowledgebase-model \
 && git fetch origin ${TARGET_BRANCH} \
 && git checkout ${TARGET_BRANCH} \
+&& sbt publishLocal \
 && cd ..  \
 && git clone https://github.com/toposoid/toposoid-deduction-protocol-model.git \
 && cd toposoid-deduction-protocol-model \
