--- a/docker-compose-workflow.yml
+++ b/docker-compose-workflow.yml
@@ -1,5 +1,5 @@
 version: '3'
 services:
   toposoid-deduction-protocol-model:
-    image: toposoid-deduction-protocol-model:0.3-SNAPSHOT
+    image: toposoid-deduction-protocol-model:0.3
     tty: true
