--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,7 +9,7 @@ env:
   PJ_ACTOR: toposoid
   PJ_REPO: toposoid-deduction-protocol-model
   PJ_BRANCH: feature
-  PJ_VERSION: 0.3
+  PJ_VERSION: 0.4-SNAPSHOT
 jobs:
   header-check_toposoid-deduction-protocol-modelj:
     runs-on: ubuntu-latest
