--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ${{ env.PJ_ACTOR }}/toposoid-scala-lib
+          ref: ${{ env.PJ_BRANCH }}
       - name: Docker meta
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v3
