--- a/.github/workflows/version-up-scala-2.13.yml
+++ b/.github/workflows/version-up-scala-2.13.yml
@@ -1,15 +1,13 @@
 name: Header Check
 on:
-  pull_request:
-    types:
-      - closed
+  push:
     branches:
-      - main
+      - version-up-scala-2.13
   workflow_dispatch:
 env:
   PJ_ACTOR: toposoid
   PJ_REPO: toposoid-deduction-protocol-model
-  PJ_BRANCH: main
+  PJ_BRANCH: version-up-scala-2.13
   PJ_VERSION: 0.5-SNAPSHOT
 jobs:
   header-check_toposoid-deduction-protocol-modelj:
