--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -10,7 +10,7 @@ env:
   PJ_ACTOR: toposoid
   PJ_REPO: toposoid-deduction-protocol-model
   PJ_BRANCH: main
-  PJ_VERSION: 0.5-SNAPSHOT
+  PJ_VERSION: 0.4
 jobs:
   header-check_toposoid-deduction-protocol-modelj:
     runs-on: ubuntu-latest
