--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,7 +8,7 @@ env:
   PJ_ACTOR: toposoid
   PJ_REPO: toposoid-deduction-protocol-model
   PJ_BRANCH: feature
-  PJ_VERSION: 0.5-SNAPSHOT
+  PJ_VERSION: 0.5
 jobs:
   header-check_toposoid-deduction-protocol-modelj:
     runs-on: ubuntu-latest
